add images in card

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <section class="activities__container">
         <div class="card work__container">
           <div class="work__extra card__extra">
+            <div class="card__image--container"><img class="card__image" src="./images/icon-work.svg" alt=""></div>
             <div class="work__background card__background">
               <div class="work__header card__header">
                 <div class="work__title card__title"> Work</div>
@@ -66,6 +67,7 @@
         </div>
         <div class="card play__container">
           <div class="play__extra card__extra">
+            <div class="card__image--container"><img class="card__image" src="./images/icon-play.svg" alt=""></div>
             <div class="pay__background card__background">
               <div class="play__header card__header">
                 <div class="play__title card__title"> Play</div>
@@ -88,6 +90,7 @@
         </div>
         <div class="card study__container">
           <div class="study__extra card__extra">
+            <div class="card__image--container"><img class="card__image" src="./images/icon-study.svg" alt=""></div>
             <div class="study__background card__background">
               <div class="study__header card__header">
                 <div class="study__title card__title"> Study</div>
@@ -110,6 +113,7 @@
         </div>
         <div class="card exercise__container">
           <div class="exercise__extra card__extra">
+            <div class="card__image--container"><img class="card__image" src="./images/icon-exercise.svg" alt=""></div>
             <div class="exercise__background card__background">
               <div class="exercise__header card__header">
                 <div class="exercise__title card__title"> Exercise</div>
@@ -132,6 +136,7 @@
         </div>
         <div class="card social__container">
           <div class="social__extra card__extra">
+            <div class="card__image--container"><img class="card__image" src="./images/icon-social.svg" alt=""></div>
             <div class="social__background card__background">
               <div class="social__header card__header">
                 <div class="social__title card__title"> Social</div>
@@ -154,6 +159,7 @@
         </div>
         <div class="card self-care__container">
           <div class="self-care__extra card__extra">
+            <div class="card__image--container"><img class="card__image" src="./images/icon-self-care.svg" alt=""></div>
             <div class="self-care__background card__background">
               <div class="self-care__header card__header">
                 <div class="self-care__title card__title"> Self Care</div>
